--- a/FrontEndtesting/Main front end/settings.json
+++ b/FrontEndtesting/Main front end/settings.json
@@ -1,14 +1,10 @@
 {
-    "strands":[
-      {"strand": 1, "round": true, "flat": false},
-      {"strand": 2, "round": true, "flat": false},
-      {"strand": 3, "round": false, "flat": true},
-      {"strand": 4, "round": true, "flat": false},
-      {"strand": 5, "round": true, "flat": true},
-      {"strand": 6, "round": true, "flat": true}
-    ],
-    "newStrands":
+    "strands":
         {"strand_1": {"round": true, "flat": false},
-        "strand_2": {"round": true, "flat": false}}
+        "strand_2": {"round": true, "flat": false},
+        "strand_3": {"round": false, "flat": true},
+        "strand_4": {"round": true, "flat": false},
+        "strand_5": {"round": false, "flat": true},
+        "strand_6": {"round": true, "flat": true}}
     
 }
